typgraphy issues and layout issue fixed

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -261,7 +261,7 @@
 
 .simple-editor-content .tiptap.ProseMirror {
   padding: 20px 30px !important;
-  color: #8e8e8e;
+  color: #6e6e6e;
 }
 
 .selected {
